third_party/move/move-compiler-v2/tests/reference-safety/v1-borrow-tests/borrow_global_bad5.no-opt.exp

Diagnostics:
error: cannot mutably borrow since mutable references exist
   ┌─ tests/reference-safety/v1-borrow-tests/borrow_global_bad5.move:9:22
   │
 8 │         let t1_ref = if (b) borrow_global_mut<T>(sender) else &mut t;
   │                             ---------------------------- previous mutable global borrow
 9 │         let t2_ref = borrow_global_mut<T>(sender);
   │                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow attempted here
10 │         t1_ref;
   │         ------ requirement enforced here
